<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.janicolas.puzzlecollector.activity.UserPanel">

    <RelativeLayout
        android:id="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/PuzzleCollectorToolbarStyle">

        <ImageButton
            android:id="@+id/ibBack"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/toolbarButton"
            android:src="@drawable/back_icon"
            style="@style/PuzzleCollectorToolbarButtonStyle"/>

        <ImageButton
            android:id="@+id/ibConf"
            android:contentDescription="@string/toolbarButton"
            android:layout_alignParentEnd="true"
            android:src="@drawable/config_icon"
            style="@style/PuzzleCollectorToolbarButtonStyle"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/userPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:visibility="invisible">

        <ImageView
            android:id="@+id/ivUserIcon"
            android:layout_width="185dp"
            android:layout_height="185dp"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/user_icon"
            android:contentDescription="@string/user" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/edit_icon"
            android:layout_alignBottom="@id/ivUserIcon"
            android:layout_alignEnd="@id/ivUserIcon"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/user"/>

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivUserIcon"
            android:layout_marginBottom="10dp"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="UserName"
            android:textAlignment="center"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/noUserPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_alignBottom="@id/userPanel">

        <TextView
            android:id="@+id/tvInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/infoLogin"
            android:textSize="18sp"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/btLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/tvInfo"
            android:layout_marginTop="20dp"
            android:text="@string/login"
            style="@style/PuzzleCollectorButtonStyle"/>

        <Button
            android:id="@+id/btRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btLogin"
            android:layout_centerHorizontal="true"
            android:text="@string/register"
            style="@style/PuzzleCollectorButtonStyle"/>

    </RelativeLayout>

    <Button
        android:id="@+id/btWishlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/noUserPanel"
        android:layout_centerHorizontal="true"
        android:drawableLeft="@drawable/wishlist_icon"
        android:text="@string/btWishlist"
        style="@style/PuzzleCollectorButtonStyle"/>

    <Button
        android:id="@+id/btSuggest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btWishlist"
        android:layout_centerHorizontal="true"
        android:drawableLeft="@drawable/puzzle_icon"
        android:text="@string/btSuggest"
        style="@style/PuzzleCollectorButtonStyle"/>
</RelativeLayout>