<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.janicolas.puzzlecollector.activity.InfoActivity"
    android:background="#005628">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ibBack"
        android:contentDescription="@string/toolbarButton"
        android:src="@drawable/back_icon"
        android:background="#005628"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp" />

    <ImageView
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_launcher"
        android:contentDescription="@string/app_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/app_name"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:text="@string/appInfoDesc"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#CFCFCF" />

</LinearLayout>