<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.card.MaterialCardView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/PuzzleCollectorDialogStyle">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/ibClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:src="@drawable/close_icon"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/userLogin"
                style="@style/PuzzleCollectorMenuItem"/>

            <ImageButton
                android:id="@+id/ibWishlist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:src="@drawable/no_wishlist_icon"
                android:layout_alignParentStart="true"
                android:contentDescription="@string/userLogin"
                style="@style/PuzzleCollectorMenuItem"/>

            <ImageView
                android:id="@+id/ivPuzzleImg"
                android:layout_width="185dp"
                android:layout_height="185dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/example"
                android:contentDescription="@string/user" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Clementoni Puzzle La Casa de Papel 1000 piezas"
                android:layout_below="@id/ivPuzzleImg"
                android:textColor="@color/white"
                android:background="#353535"
                android:textSize="16sp"
                android:textStyle="bold"
                android:padding="5dp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Precio: 10.95 €"
                android:layout_margin="5dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/tvName"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:padding="5dp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/tvBrand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Marca: Clementoni"
                android:layout_margin="5dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/tvPrice"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:padding="5dp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/tvType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Puzzles Jigsaw"
                android:layout_margin="5dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/tvBrand"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:padding="5dp"
                android:gravity="center"/>

            <Button
                android:id="@+id/btNotes"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btNotes"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_centerHorizontal="true"
                android:background="@android:color/transparent"
                android:layout_below="@id/tvType"/>

            <TextView
                android:id="@+id/tvLinksType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/buyLinks"
                android:layout_margin="5dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/btNotes"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:padding="5dp"
                android:gravity="center"/>

            <RelativeLayout
                android:id="@+id/links"
                android:layout_below="@id/tvLinksType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true">

                <ImageButton
                    android:id="@+id/btLink1"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:scaleType="fitXY"
                    android:contentDescription="@string/links"
                    tools:src="@drawable/kubekings" />

                <ImageButton
                    android:id="@+id/btLink2"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:scaleType="fitXY"
                    android:layout_toEndOf="@id/btLink1"
                    android:contentDescription="@string/links"
                    tools:src="@drawable/juegosbesa" />

                <ImageButton
                    android:id="@+id/btLink3"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:scaleType="fitXY"
                    android:layout_toEndOf="@id/btLink2"
                    android:contentDescription="@string/links"
                    tools:src="@drawable/amazon" />
            </RelativeLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btCollection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/btAddCollection"
                android:layout_below="@id/links"
                style="@style/PuzzleCollectorCollectionButtonStyle"/>

        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>