<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.card.MaterialCardView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/PuzzleCollectorDialogStyle">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/ibClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:src="@drawable/close_icon"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/userLogin"
                style="@style/PuzzleCollectorMenuItem"/>

            <ImageView
                android:id="@+id/ivUserIcon"
                android:layout_width="185dp"
                android:layout_height="185dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/user_icon"
                android:contentDescription="@string/user"
                android:visibility="gone"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/edit_icon"
                android:layout_alignBottom="@id/ivUserIcon"
                android:layout_alignEnd="@id/ivUserIcon"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/user"
                android:visibility="gone"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilName"
                android:hint="@string/userLogin"
                app:counterEnabled="true"
                app:counterMaxLength="25"
                android:layout_below="@id/ibClose"
                style="@style/PuzzleCollectorInputStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:inputType="textPersonName"
                    android:id="@+id/etName"
                    android:ems="10"
                    android:textSize="13sp"
                    android:maxLength="25"
                    android:textColor="@color/black"
                    android:textStyle="normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPass"
                android:hint="@string/passLogin"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                android:layout_below="@id/tilName"
                app:endIconMode="password_toggle"
                style="@style/PuzzleCollectorInputStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:inputType="textPassword"
                    android:id="@+id/etPass"
                    android:ems="10"
                    android:textSize="13sp"
                    android:maxLength="20"
                    android:textColor="@color/black"
                    android:textStyle="normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilRepeatPass"
                android:hint="@string/repeatPass"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                android:layout_below="@id/tilPass"
                app:endIconMode="password_toggle"
                style="@style/PuzzleCollectorInputStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:inputType="textPassword"
                    android:id="@+id/etRepeatPass"
                    android:ems="10"
                    android:textSize="13sp"
                    android:maxLength="20"
                    android:textColor="@color/black"
                    android:textStyle="normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:id="@+id/tvError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/tilRepeatPass"
                android:textColor="#FF0000"
                android:textSize="15sp"
                android:visibility="gone"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btRegister"
                android:text="@string/register"
                android:layout_below="@id/tvError"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                style="@style/PuzzleCollectorButtonStyle"/>

        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>